--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "gulp-clean": "^0.3.2",
     "gulp-concat": "^2.6.1",
     "gulp-data": "^1.2.1",
-    "gulp-gh-pages": "^0.5.4",
     "gulp-if": "^2.0.2",
     "gulp-imagemin": "^3.2.0",
     "gulp-jade": "^1.1.0",
@@ -37,5 +36,8 @@
     "lodash": "^4.17.4",
     "main-bower-files": "^2.13.1",
     "minimist": "^1.2.0"
+  },
+  "devDependencies": {
+    "gulp-gh-pages": "^0.5.4"
   }
 }
